Migrate from Java 8 to 11
OpenRewrite